--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <header>
-  <h1>Kids English Stories</h1>
+  <h1>Jane English Class</h1>
   <div class="sub">Sentence by sentence English listening</div>
 </header>
 
@@ -81,6 +81,10 @@
         <div class="label">Speed</div>
         <input id="rate" type="number" step="0.05" min="0.6" max="1.1" value="0.85">
       </div>
+      <div>
+  <div class="label">Interval (sec)</div>
+  <input id="interval" type="number" min="0" max="5" step="0.5" value="1.5">
+</div>
       <div>
         <div class="label">Repeat</div>
         <input id="repeat" type="number" min="1" max="3" value="1">
@@ -123,6 +127,26 @@ const stories = [
       { idx: 14, text: "Slow and steady wins the race.", ko: "천천히 꾸준하면 결국 이겨요." }
     ]
   }
+{
+  id: "aesop_03",
+  title: "The Lion and the Mouse",
+  level: 1,
+  sentences: [
+    { idx: 1, text: "A lion was sleeping.", ko: "사자는 자고 있었어요." },
+    { idx: 2, text: "A small mouse ran over him.", ko: "작은 쥐가 사자 위를 달렸어요." },
+    { idx: 3, text: "The lion woke up.", ko: "사자는 깨어났어요." },
+    { idx: 4, text: "He caught the mouse.", ko: "사자는 쥐를 붙잡았어요." },
+    { idx: 5, text: "The mouse said, \"Please let me go.\"", ko: "쥐가 말했어요. \"제발 살려주세요.\"" },
+    { idx: 6, text: "The lion laughed.", ko: "사자는 웃었어요." },
+    { idx: 7, text: "He let the mouse go.", ko: "그는 쥐를 놓아주었어요." },
+    { idx: 8, text: "Later, the lion was trapped.", ko: "나중에 사자는 덫에 걸렸어요." },
+    { idx: 9, text: "The mouse came back.", ko: "쥐가 다시 왔어요." },
+    { idx: 10, text: "The mouse bit the rope.", ko: "쥐는 밧줄을 갉았어요." },
+    { idx: 11, text: "The lion was free.", ko: "사자는 자유로워졌어요." },
+    { idx: 12, text: "Kindness is never wasted.", ko: "친절은 절대 헛되지 않아요." }
+  ]
+}   
+
 ];
 
 /* ============ ELEMENTS ============ */
@@ -164,6 +188,8 @@ function renderSentences(){
     row.className = "sentence";
     row.dataset.idx = String(s.idx);
 
+    const intervalInput = document.getElementById("interval");
+    
     const textWrap = document.createElement("div");
     const en = document.createElement("div");
     en.className = "text en";
