--- a/index.html
+++ b/index.html
@@ -1,10 +1,412 @@
-<button id="testBtn" type="button">테스트</button>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>Kids English Stories</title>
 
-<span id="levelBox" style="display:none; margin-left:8px;">
-  <label for="levelSelect">레벨:</label>
-  <select id="levelSelect">
-    <option value="beginner">초급</option>
-    <option value="intermediate">중급</option>
-    <option value="advanced">고급</option>
-  </select>
-</span>
+  <style>
+    :root { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+    body { margin: 0; background: #f6f7f9; color: #111; }
+    header { padding: 16px; background: #ffffff; border-bottom: 1px solid #e6e8ee; position: sticky; top: 0; z-index: 10; }
+    h1 { margin: 0; font-size: 18px; }
+    .sub { margin-top: 6px; font-size: 13px; color: #555; }
+    main { padding: 16px; max-width: 920px; margin: 0 auto; }
+    .card { background: #ffffff; border: 1px solid #e6e8ee; border-radius: 16px; padding: 16px; }
+    .row { display: flex; gap: 12px; flex-wrap: wrap; align-items: center; }
+    .label { font-size: 13px; color: #555; margin-bottom: 6px; }
+    select, button, input { font-size: 16px; padding: 10px 12px; border-radius: 10px; border: 1px solid #d4d8e2; background: #fff; }
+    button { cursor: pointer; }
+    button.primary { background: #111; color: #fff; border-color: #111; }
+    .hint { margin-top: 10px; font-size: 12px; color: #666; }
+
+    .controls {
+      margin-top: 12px;
+      display: grid;
+      grid-template-columns: repeat(3, minmax(140px, 1fr));
+      gap: 10px;
+      align-items: end;
+    }
+    .controls .btn { grid-column: span 3; display: flex; gap: 10px; flex-wrap: wrap; }
+    .controls .btn button { flex: 1; min-width: 140px; }
+
+    .badges { display:flex; justify-content: space-between; align-items:center; gap:12px; flex-wrap:wrap; margin-bottom: 10px; }
+    .pill { display:inline-flex; gap:8px; align-items:center; padding:6px 10px; border-radius:999px; border:1px solid #e6e8ee; background:#f0f2f8; font-size:12px; color:#333; }
+    .warn { background:#fff6e5; border-color:#ffe2b3; color:#7a3b00; }
+
+    .sentences { margin-top: 18px; display: grid; gap: 12px; }
+    .sentence { display: grid; grid-template-columns: 1fr auto; gap: 12px; padding: 14px; border-radius: 14px; border: 1px solid #eef0f6; background: #fafbff; }
+
+    .sentence.active { background: #fff4cc; border-color: #f4b400; }
+    .text.en { font-size: 18px; line-height: 1.35; font-weight: 500; }
+    .sentence.active .text.en { font-weight: 700; }
+    .text.ko { margin-top: 4px; font-size: 14px; color: #666; }
+    .sentence.active .text.ko { color: #5c4a00; }
+    .btns { display: flex; gap: 8px; align-items: center; }
+
+    .statusline { margin-top: 10px; display:flex; gap:8px; flex-wrap:wrap; font-size:12px; color:#555; }
+    .statusline .err { color:#a40000; }
+    .statusline .ok { color:#0b6b0b; }
+
+    footer { text-align: center; font-size: 12px; color: #666; padding: 20px 0; }
+
+    @media (prefers-color-scheme: dark) {
+      body { background:#0b0c10; color:#f1f1f1; }
+      header, .card { background:#12131a; border-color:#26283a; }
+      select, button, input { background:#12131a; color:#f1f1f1; border-color:#26283a; }
+      .sub, .label, .hint, footer { color:#b8b8c7; }
+      .sentence { background:#151826; border-color:#20233a; }
+      .sentence.active { background:#3b3200; border-color:#f4b400; }
+      .text.ko { color:#b8b8c7; }
+      .sentence.active .text.ko { color:#ffe08a; }
+      .pill { background:#151826; border-color:#26283a; color:#d8d8e6; }
+      .warn { background:#2a1d00; border-color:#5b3a00; color:#ffd9a3; }
+      .statusline { color:#b8b8c7; }
+    }
+  </style>
+</head>
+
+<body>
+<header>
+  <h1>재인이의 영어 교실 - Jane's English Class</h1>
+  <div class="sub">Sentence by sentence English listening & speaking by Martin PARK</div>
+</header>
+
+<main>
+  <div class="card">
+
+    <div class="badges">
+      <div class="row">
+        <div class="pill">English + Korean</div>
+        <div class="pill warn" id="voiceStatus">Voice: loading...</div>
+      </div>
+      <div class="row">
+        <button id="refreshVoices">Refresh voices</button>
+      </div>
+    </div>
+
+    <div class="row">
+      <div style="flex:1; min-width: 280px;">
+        <div class="label">Story</div>
+        <select id="storySelect" style="width:100%;"></select>
+      </div>
+      <div style="flex:1; min-width: 280px;">
+        <div class="label">Voice</div>
+        <select id="voiceSelect" style="width:100%;"></select>
+      </div>
+    </div>
+
+    <div class="controls">
+      <div>
+        <div class="label">Speed</div>
+        <input id="rate" type="number" step="0.05" min="0.6" max="1.1" value="0.85">
+      </div>
+      <div>
+        <div class="label">Repeat</div>
+        <input id="repeat" type="number" min="1" max="3" value="1">
+      </div>
+      <div>
+        <div class="label">Interval (sec)</div>
+        <input id="interval" type="number" min="0" max="5" step="0.5" value="1.5">
+      </div>
+
+      <div class="btn">
+        <button class="primary" id="playAll">Play All</button>
+        <button id="stop">Stop</button>
+      </div>
+    </div>
+
+    <div class="hint">
+      Stories are loaded from <code>/stories/*.json</code>. If Voice is empty: tap any ▶ once, then press “Refresh voices”.
+    </div>
+
+    <div class="statusline" id="statusLine"></div>
+
+    <div class="sentences" id="sentences"></div>
+  </div>
+</main>
+
+<footer>Made for kids learning English</footer>
+
+<script>
+/* ================== ELEMENTS ================== */
+const storySelect = document.getElementById("storySelect");
+const voiceSelect = document.getElementById("voiceSelect");
+const sentencesEl = document.getElementById("sentences");
+
+const playAllBtn = document.getElementById("playAll");
+const stopBtn = document.getElementById("stop");
+const refreshVoicesBtn = document.getElementById("refreshVoices");
+
+const rateInput = document.getElementById("rate");
+const repeatInput = document.getElementById("repeat");
+const intervalInput = document.getElementById("interval");
+
+const voiceStatus = document.getElementById("voiceStatus");
+const statusLine = document.getElementById("statusLine");
+
+let voices = [];
+let manifest = [];         // list of stories from manifest.json
+let currentStory = null;   // currently loaded story json
+let playingAll = false;
+
+/* ================== HELPERS ================== */
+function setVoiceStatus(text, warn=false){
+  voiceStatus.textContent = text;
+  voiceStatus.classList.toggle("warn", warn);
+}
+
+function setStatusLine(items){
+  // items: [{text, cls}]
+  statusLine.innerHTML = "";
+  for (const it of items){
+    const span = document.createElement("span");
+    span.textContent = it.text;
+    if (it.cls) span.className = it.cls;
+    statusLine.appendChild(span);
+  }
+}
+
+function sleep(ms){ return new Promise(r => setTimeout(r, ms)); }
+
+function highlight(idx){
+  document.querySelectorAll(".sentence").forEach(el => el.classList.remove("active"));
+  const row = document.querySelector(`.sentence[data-idx="${idx}"]`);
+  if (row) row.classList.add("active");
+}
+
+function getSelectedVoice(){
+  const uri = voiceSelect.value;
+  return voices.find(v => v.voiceURI === uri) || null;
+}
+
+function safeNumber(v, def=0){
+  const n = Number(v);
+  return Number.isFinite(n) ? n : def;
+}
+function baseUrl() {
+  // Ensure trailing slash so relative URLs resolve correctly
+  const u = new URL(window.location.href);
+  if (!u.pathname.endsWith("/")) u.pathname += "/";
+  return u;
+}
+async function fetchJson(path){
+  const url = new URL(path, baseUrl()); // robust on GitHub Pages
+  const res = await fetch(url.toString(), { cache: "no-store" });
+  if (!res.ok) throw new Error(`Failed to load ${url.pathname} (${res.status})`);
+  return await res.json();
+}
+
+/* ================== VOICES ================== */
+function loadVoices(){
+  if (!("speechSynthesis" in window)){
+    setVoiceStatus("Voice: not supported", true);
+    return;
+  }
+
+  voices = speechSynthesis.getVoices() || [];
+  voiceSelect.innerHTML = "";
+
+  if (!voices.length){
+    setVoiceStatus("Voice: empty (tap ▶ once, then refresh)", true);
+    return;
+  }
+
+  // Prefer English voices first
+  const sorted = [...voices].sort((a,b) => {
+    const aEn = (a.lang || "").toLowerCase().startsWith("en") ? 0 : 1;
+    const bEn = (b.lang || "").toLowerCase().startsWith("en") ? 0 : 1;
+    return aEn - bEn;
+  });
+
+  for (const v of sorted){
+    const opt = document.createElement("option");
+    opt.value = v.voiceURI;
+    opt.textContent = `${v.name} — ${v.lang}`;
+    voiceSelect.appendChild(opt);
+  }
+
+  setVoiceStatus(`Voice: ${voices.length} loaded`, false);
+}
+
+if ("speechSynthesis" in window){
+  speechSynthesis.onvoiceschanged = () => loadVoices();
+}
+
+/* ================== RENDER ================== */
+function renderSentences(){
+  sentencesEl.innerHTML = "";
+  if (!currentStory) return;
+
+  for (const s of currentStory.sentences){
+    const row = document.createElement("div");
+    row.className = "sentence";
+    row.dataset.idx = String(s.idx);
+
+    const textWrap = document.createElement("div");
+
+    const en = document.createElement("div");
+    en.className = "text en";
+    en.textContent = s.text;
+
+    const ko = document.createElement("div");
+    ko.className = "text ko";
+    ko.textContent = s.ko || "";
+
+    textWrap.appendChild(en);
+    textWrap.appendChild(ko);
+
+    const btns = document.createElement("div");
+    btns.className = "btns";
+
+    const playBtn = document.createElement("button");
+    playBtn.textContent = "▶";
+    playBtn.addEventListener("click", () => playSentence(s.idx, 1));
+
+    const repBtn = document.createElement("button");
+    repBtn.textContent = "🔁";
+    repBtn.addEventListener("click", () => playSentence(s.idx, 2));
+
+    btns.appendChild(playBtn);
+    btns.appendChild(repBtn);
+
+    row.appendChild(textWrap);
+    row.appendChild(btns);
+    sentencesEl.appendChild(row);
+  }
+}
+
+/* ================== SPEAK ================== */
+function speakOnce(text){
+  return new Promise((resolve, reject) => {
+    const u = new SpeechSynthesisUtterance(text);
+    const v = getSelectedVoice();
+    if (v) u.voice = v;
+    u.lang = v?.lang || "en-US";
+    u.rate = Math.min(1.1, Math.max(0.6, safeNumber(rateInput.value, 0.85)));
+    u.onend = () => resolve();
+    u.onerror = (e) => reject(e);
+    speechSynthesis.speak(u);
+  });
+}
+
+async function playSentence(idx, forceRepeat){
+  playingAll = false;
+  if ("speechSynthesis" in window) speechSynthesis.cancel();
+
+  highlight(idx);
+
+  const s = currentStory?.sentences?.find(x => x.idx === idx);
+  if (!s) return;
+
+  const repeat = Math.min(3, Math.max(1, Math.round(forceRepeat || safeNumber(repeatInput.value, 1))));
+  for (let i=0; i<repeat; i++){
+    await speakOnce(s.text);
+    if (i < repeat - 1) await sleep(250);
+  }
+}
+
+async function playAll(){
+  if (!currentStory) {
+    setStatusLine([{ text: "Please select a story first.", cls: "err" }]);
+    return;
+  }
+
+  playingAll = true;
+  if ("speechSynthesis" in window) speechSynthesis.cancel();
+
+  const intervalMs = Math.max(0, safeNumber(intervalInput.value, 0)) * 1000;
+
+  for (const s of currentStory.sentences){
+    if (!playingAll) break;
+
+    highlight(s.idx);
+
+    const repeat = Math.min(3, Math.max(1, Math.round(safeNumber(repeatInput.value, 1))));
+    for (let i=0; i<repeat; i++){
+      if (!playingAll) break;
+      await speakOnce(s.text);
+      if (i < repeat - 1) await sleep(250);
+    }
+
+    if (!playingAll) break;
+    if (intervalMs > 0) await sleep(intervalMs);
+  }
+
+  playingAll = false;
+  highlight(-1);
+}
+
+function stopAll(){
+  playingAll = false;
+  if ("speechSynthesis" in window) speechSynthesis.cancel();
+  highlight(-1);
+}
+
+/* ================== STORIES (FETCH) ================== */
+async function loadManifest(){
+  manifest = await fetchJson("stories/manifest.json");
+
+  storySelect.innerHTML = "";
+  for (const item of manifest){
+    const opt = document.createElement("option");
+    opt.value = item.id;
+    opt.textContent = `${item.title} (Level ${item.level})`;
+    storySelect.appendChild(opt);
+  }
+
+  if (manifest.length){
+    storySelect.value = manifest[0].id;
+    await loadStoryById(manifest[0].id);
+  }
+}
+
+async function loadStoryById(id){
+  const item = manifest.find(m => m.id === id);
+  if (!item) throw new Error(`Story not found: ${id}`);
+
+  setStatusLine([{ text: "Loading story...", cls: "" }]);
+
+  currentStory = await fetchJson(`stories/${item.file}`);
+
+  renderSentences();
+  setStatusLine([
+    { text: `Loaded: ${currentStory.title}`, cls: "ok" },
+    { text: ` • Sentences: ${currentStory.sentences.length}`, cls: "" }
+  ]);
+}
+
+/* ================== EVENTS ================== */
+storySelect.addEventListener("change", async (e) => {
+  stopAll();
+  try{
+    await loadStoryById(e.target.value);
+  }catch(err){
+    setStatusLine([{ text: String(err.message || err), cls: "err" }]);
+  }
+});
+
+refreshVoicesBtn.addEventListener("click", () => loadVoices());
+playAllBtn.addEventListener("click", () => playAll());
+stopBtn.addEventListener("click", () => stopAll());
+
+/* ================== INIT ================== */
+(async function init(){
+  loadVoices();
+  // iOS Safari: voices can appear late; retry a couple of times
+  setTimeout(loadVoices, 300);
+  setTimeout(loadVoices, 1200);
+
+  try{
+    await loadManifest();
+  }catch(err){
+    setStatusLine([
+      { text: "Failed to load stories.", cls: "err" },
+      { text: " • Create /stories/manifest.json and story files.", cls: "" },
+      { text: ` • ${String(err.message || err)}`, cls: "" }
+    ]);
+  }
+})();
+</script>
+</body>
+</html>
