Change title and footer text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Kids English Stories</title>
+  <title>Jane English World</title>
 
   <style>
     :root { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
@@ -122,7 +122,7 @@
   <div class="sentences" id="sentences"></div>
 </main>
 
-<footer>Made for kids learning English</footer>
+<footer>Made for Jane PARK learning English</footer>
 
 <script>
 /* ================== ELEMENTS ================== */
