Update header title and subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <body>
 <header>
   <div class="wrap">
-    <h1>Kids English Stories</h1>
-    <div class="muted">Sentence-by-sentence listening & repeating (with optional Korean).</div>
+    <h1>Jane's English World</h1>
+    <div class="muted">Lovely Jane</div>
   </div>
 </header>
 
